--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Zoe Jamito</h3>
-                <h4>Ambot</h4>
+                <h4>Akong crush yiiee</h4>
               </div>
             </div><!-- End testimonial item -->
 
